added to modified file: index.html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>assignment01</title>
+    <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header> 
 
-    </header>
-    <main>
+    <div class="header">
+        <h1>Awlad.H</h1>
+        <button>Download Resume</button>
+    </div>
 
-    </main>
-    <footer>
+    <div class="section">
+        <img src="assets/Group.png" alt="" >
+        <img src="assets/Hero-bg.png" alt="rajib"> 
+        <h2>"In the near future, I hope to <br>become a Developer."</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        <button class="btn">Contact with me</button>
+    </div>
 
-    </footer>
-    
 </body>
 </html>
